Explicity disable acceleration as it causes stability issue.

--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ require_scripts = zsurf-vim.js
 links_included_in_focus_chain = true
 spatial_navication = true
 dns_prefetch = true
-#accelerated_2d_canvas = false
-#accelerated_compositing = false
+accelerated_2d_canvas = false
+accelerated_compositing = false
 
 media_enabled = true
 media_source = false
