Added cache-path option

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,7 @@ proxy_type = none
 
 home_page = https://duckduckgo.com/
 require_scripts = zsurf-vim.js
+#cache_path = /home/user/.zsurf/
 #script_path = /home/user/.zsurf/scripts/
 #download_path = /home/user/Downloads/
 
