Added additional options to help reduce memory further.

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,8 @@ webgl = true
 web_audio = true
 full_screen_support = true
 
+max_history = 3;
+cache_enabled = false;
 offline_storage_database = false
 offline_web_application_cache = false
 local_storage_database = false
