Added text to the command console to display the current url and adjected some config settings.

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,7 @@ proxy_type = none
 
 home_page = https://duckduckgo.com/
 require_scripts = zsurf-vim.js
+cookies_path = /home/user/.zsurf/cookies/
 #cache_path = /home/user/.zsurf/
 #script_path = /home/user/.zsurf/scripts/
 #download_path = /home/user/Downloads/
@@ -20,8 +21,9 @@ webgl = true
 web_audio = true
 full_screen_support = true
 
-max_history = 3;
-cache_enabled = false;
+max_history = 3
+save_cookies = true
+cache_enabled = false
 offline_storage_database = false
 offline_web_application_cache = false
 local_storage_database = false
