--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@ user_agent = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/602.1 (KHTML, like Gec
 proxy_address = 127.0.0.1:8118
 proxy_type = none
 
+allow_popups = false
 home_page = https://duckduckgo.com/
 require_scripts = zsurf-vim.js
 cookies_path = /home/user/.zsurf/cookies/
