Switched out webkit for webengine and added support for spell checking.

--- a/config.ini
+++ b/config.ini
@@ -1,44 +1,35 @@
 user_agent = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/602.1 (KHTML, like Gecko) zsurf/0.10.0 Version/9.0 Safari/602.1"
-proxy_address = 127.0.0.1:8118
-proxy_type = none
 
-allow_popups = false
-home_page = https://duckduckgo.com/
+proxy_address = 127.0.0.1:8118
+proxy_type = http
+
+allow_popups = true
+spell_check = true
+spell_check_languages = en_US
+home_page = https://www.duckduckgo.com
 require_scripts = zsurf-vim.js
-cookies_path = /home/user/.zsurf/cookies/
-#cache_path = /home/user/.zsurf/
-#script_path = /home/user/.zsurf/scripts/
-#download_path = /home/user/Downloads/
+cookies_path = /home/steven/.zsurf/cookies/
+cache_path = /home/steven/.zsurf/cache
+script_path = /home/steven/.zsurf/scripts/
+download_path = /home/steven/Downloads/
 
 links_included_in_focus_chain = true
 spatial_navication = true
-dns_prefetch = true
-accelerated_2d_canvas = false
-accelerated_compositing = false
+accelerated_2d_canvas = true
 
-media_enabled = true
-media_source = false
 webgl = true
-web_audio = true
 full_screen_support = true
 
-max_history = 3
 save_cookies = true
-cache_enabled = false
-offline_storage_database = false
-offline_web_application_cache = false
-local_storage_database = false
+cache_type = none
 local_storage = true
-private_browsing = true
+private_browsing = false
 
 plugins = false
 javascript = true
-frame_flattening = true
 javascript_can_open_windows = true
-javascript_can_close_windows = true
 javascript_can_access_clipboard = true
 local_content_can_access_file_urls = true
 local_content_can_access_remote_urls = true
-web_security = true
 xss_auditing = true
 hyperlink_auditing = true
