--- a/config.ini
+++ b/config.ini
@@ -1,29 +1,27 @@
 user_agent = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/602.1 (KHTML, like Gecko) zsurf/0.10.0 Version/9.0 Safari/602.1"
 
 proxy_address = 127.0.0.1:8118
-proxy_type = http
+proxy_type = none
 
 allow_popups = true
 spell_check = true
 spell_check_languages = en_US
 home_page = https://www.duckduckgo.com
 require_scripts = zsurf-vim.js
-cookies_path = /home/steven/.zsurf/cookies/
-cache_path = /home/steven/.zsurf/cache
-script_path = /home/steven/.zsurf/scripts/
-download_path = /home/steven/Downloads/
+cookies_path = /home/user/.zsurf/cookies/
+cache_path = /home/user/.zsurf/cache
+script_path = /home/user/.zsurf/scripts/
+download_path = /home/user/Downloads/
 
 links_included_in_focus_chain = true
 spatial_navication = true
 accelerated_2d_canvas = true
-
 webgl = true
 full_screen_support = true
 
 save_cookies = true
 cache_type = none
 local_storage = true
-private_browsing = false
 
 plugins = false
 javascript = true
